# om-memory

./: .gitignore  README.md  colab_tutorial.md  pyproject.toml  requirements.txt  test_comprehensive_live.py  test_real_benchmark.py
demo/: README.md  app.py  generate_graphs.py  knowledge_base.txt  om_memory_colab.ipynb  om_memory_guide.ipynb  requirements.txt
examples/: 01_basic_chat.py  02_hybrid_rag.py
om_memory/: __init__.py  config.py  context_builder.py  core.py  models.py  observer.py  parsing.py  reflector.py  token_counter.py
om_memory/integrations/: __init__.py  langchain.py  llamaindex.py
om_memory/observability/: callbacks.py  dashboard.py  metrics.py
om_memory/prompts/: __init__.py  observer_prompt.py  reflector_prompt.py
om_memory/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  litellm_provider.py  ollama_provider.py  openai_provider.py
om_memory/storage/: __init__.py  base.py  memory.py  mongodb.py  postgres.py  redis_store.py  sqlite.py
tests/: test_comprehensive.py  test_context_builder.py  test_core.py  test_observer.py  test_token_counter.py
tests/test_storage/: test_storage.py
